create: backdrop/modal-window

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-        <!--секция1. ХІРО. Головна кнопка Order Service-->
+        <!--1 SECTION/HERO.ORDER SERVICE-->
         <section class="section-hero-servise">
             <div class="container hero-container">
                 <h1 class="section-hero-solutions" lang="en">Effective Solutions
@@ -65,7 +65,7 @@
                 <button type="button" class="section-hero-button-servise">Order Service</button>
             </div>
         </section>   
-        <!--2 секція.-->
+        <!--2 SECTION-->
         <section class="section-our-goals">
             <div class="container our-goals-container">
                 <!--прихований заголовок-->
@@ -135,7 +135,7 @@
                 </ul>
             </div>
         </section>
-        <!--секція3.Our Team-->
+        <!--3 SECTION.OUR TEAM-->
         <section class="section-team">
             <div class="container team-container">
                 <h2 class="section-team-first-title title-index" lang="en">Our Team</h2>
@@ -345,7 +345,7 @@
                 </ul>
             </div>   
         </section>
-        <!--секція4.Portfolio-->
+        <!--4 SECTION.PORTFOLIO-->
         <section class="portfolio">
             <div class="container portfolio-container">
                 <h2 class="section-portfolio title-index" lang="en">Our Portfolio</h2>
@@ -452,7 +452,7 @@
         </section>
     </main>
 
-    <!--прописую підвал-->
+    <!--FOOTER-->
     <footer class="footer">
         <div class="container footer-container">
 
@@ -513,6 +513,11 @@
         </div>
     
     </footer>
+
+    <!--BACKDROP WITH MODAL WINDOW-->
+    <div class="backdrop">
+        <div class="modal-window"></div>
+    </div>
 </body>
 
 </html>
