--- a/index.html
+++ b/index.html
@@ -516,7 +516,16 @@
 
     <!--BACKDROP WITH MODAL WINDOW-->
     <div class="backdrop">
-        <div class="modal-window"></div>
+        <div class="modal-window">
+            <button class="btn-close-window">
+                <svg class="close-icon" 
+                width="24"
+                height="24"
+                aria-label="modal close icon">
+                    <use href="./images/icons.svg#icon-ellipse-close"></use>
+                </svg>
+            </button>
+        </div>
     </div>
 </body>
 
