не можу прописати stroke/fill

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 width="24"
                 height="24"
                 aria-label="modal close icon">
-                    <use href="./images/icons.svg#icon-ellipse-close"></use>
+                    <use href="./images/icons.svg#icon-x-close"></use>
                 </svg>
             </button>
         </div>
