--- a/index.html
+++ b/index.html
@@ -519,12 +519,105 @@
         <div class="modal-window">
             <button class="btn-close-window">
                 <svg class="close-icon" 
-                width="24"
-                height="24"
+                width="8"
+                height="8"
                 aria-label="modal close icon">
                     <use href="./images/icons.svg#icon-x-close"></use>
                 </svg>
             </button>
+            <p class="feedback">Leave your contacts and we will call you back</p>
+            <form class="review-form">
+                <div class="review-form-box">
+                    <label for="user-name" class="review-form-label">Name</label>
+
+                    <div class="review-form-positioning-box">
+                        <input 
+                        class="review-form-input" 
+                        type="text" id="user-name" 
+                        name="user_name" 
+                        pattern="[a-zA-Zа-яА-яіІїЇєЄґҐ']+"
+                        title="Volodymyr" 
+                        required>
+                        <svg 
+                        class="review-form-icon" 
+                        width="18" 
+                        height="18" 
+                        aria-label="icon name">
+                            <use href="./images/icons.svg#icon-name"></use>
+                        </svg>
+                    </div>
+
+                </div>
+                <div class="review-form-box">
+                    <label for="user-phone" class="review-form-label">Phone</label>
+
+                    <div class="review-form-positioning-box">
+                        <input 
+                        class="review-form-input" 
+                        type="tel" id="user-phone" 
+                        name="user_phone"
+                        pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                        title="xxx-xxx-xx-xx" 
+                        required>
+                        <svg 
+                        class="review-form-icon" 
+                        width="18" 
+                        height="18" 
+                        aria-label="icon phone">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                    
+                </div>
+                <div class="review-form-box">
+                    <label for="user-email" class="review-form-label">Email</label>
+
+                    <div class="review-form-positioning-box">
+                        <input 
+                        class="review-form-input" 
+                        type="email" 
+                        id="user-email" 
+                        name="user_email" 
+                        pattern="[a-zA-Zа-яА-яіІїЇєЄґҐ'@]"
+                        title="webctudio@gmail.com" 
+                        required>
+                        <svg 
+                        class="review-form-icon" 
+                        width="18" 
+                        height="18" 
+                        aria-label="icon email">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                    
+                </div>
+                <div class="review-form-box">
+                    <label for="user-comment" class="review-form-label">Comment</label>
+                    <textarea
+                    class="review-form-comment" 
+                    name="user_comment" 
+                    id="user-comment"  
+                    placeholder="Text input"></textarea>
+                </div>
+                <div class="review-form-checkbox-box">
+                    <input
+                    class="review-form-checkbox" 
+                    type="checkbox" 
+                    required
+                    id="user-privacy"
+                    name="user_privacy"
+                    value="true"
+                    >
+                    <label 
+                    class="review-form-checkdox-label"
+                    for="user-privacy">
+                    <span class="review-form-checkbox-span"></span>
+                    I accept the terms and conditions of the 
+                    <a href="" class="review-form-checkbox-link">Privacy Policy</a> 
+                </label>
+                </div>
+                <button class="review-form-submit" type="submit">Send</button>
+            </form>
         </div>
     </div>
 </body>
