--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 </div>
                 <div class="review-form-checkbox-box">
                     <input
-                    class="review-form-checkbox" 
+                    class="review-form-checkbox visually-hidden" 
                     type="checkbox" 
                     required
                     id="user-privacy"
@@ -611,7 +611,14 @@
                     <label 
                     class="review-form-checkdox-label"
                     for="user-privacy">
-                    <span class="review-form-checkbox-span"></span>
+                    <span class="review-form-checkbox-span">
+                        <svg class="review-form-icon-checkmark"
+                        width="16" 
+                        height="16" 
+                        aria-label="icon checkmark">
+                            <use href="./images/icons.svg#icon-checkmark"></use>
+                        </svg>
+                    </span>
                     I accept the terms and conditions of the 
                     <a href="" class="review-form-checkbox-link">Privacy Policy</a> 
                 </label>
