робота над backdrop

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         width="16" 
                         height="16" 
                         aria-label="icon checkmark">
-                            <use href="./images/icons.svg#icon-checkmark-1"></use>
+                            <use href="./images/icons.svg#icon-close-click"></use>
                         </svg>
                     </span>
                     I accept the terms and conditions of the 
