--- a/index.html
+++ b/index.html
@@ -517,7 +517,8 @@
     <!--BACKDROP WITH MODAL WINDOW-->
     <div class="backdrop">
         <div class="modal-window">
-            <button class="btn-close-window">
+            <button class="btn-close-window" 
+            type="button">
                 <svg class="close-icon" 
                 width="8"
                 height="8"
@@ -534,14 +535,14 @@
                         <input 
                         class="review-form-input" 
                         type="text" id="user-name" 
-                        name="user_name" 
+                        name="user-name" 
                         pattern="[a-zA-Zа-яА-яіІїЇєЄґҐ']+"
                         title="Volodymyr" 
                         required>
                         <svg 
                         class="review-form-icon" 
                         width="18" 
-                        height="18" 
+                        height="24" 
                         aria-label="icon name">
                             <use href="./images/icons.svg#icon-name"></use>
                         </svg>
@@ -562,7 +563,7 @@
                         <svg 
                         class="review-form-icon" 
                         width="18" 
-                        height="18" 
+                        height="24" 
                         aria-label="icon phone">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
@@ -584,7 +585,7 @@
                         <svg 
                         class="review-form-icon" 
                         width="18" 
-                        height="18" 
+                        height="24" 
                         aria-label="icon email">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
@@ -595,7 +596,7 @@
                     <label for="user-comment" class="review-form-label">Comment</label>
                     <textarea
                     class="review-form-comment" 
-                    name="user_comment" 
+                    name="user-comment" 
                     id="user-comment"  
                     placeholder="Text input"></textarea>
                 </div>
@@ -605,7 +606,7 @@
                     type="checkbox" 
                     required
                     id="user-privacy"
-                    name="user_privacy"
+                    name="user-privacy"
                     value="true"
                     >
                     <label 
@@ -613,8 +614,8 @@
                     for="user-privacy">
                     <span class="review-form-checkbox-span">
                         <svg class="review-form-icon-checkmark"
-                        width="16" 
-                        height="16" 
+                        width="10" 
+                        height="8" 
                         aria-label="icon checkmark">
                             <use href="./images/icons.svg#icon-close-click"></use>
                         </svg>
