--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     </div>
                     
                 </div>
-                <div class="review-form-box">
+                <div class="review-form-box review-form-box-comment-texteria">
                     <label for="user-comment" class="review-form-label">Comment</label>
                     <textarea
                     class="review-form-comment" 
@@ -617,7 +617,7 @@
                         width="10" 
                         height="8" 
                         aria-label="icon checkmark">
-                            <use href="./images/icons.svg#icon-close-click"></use>
+                            <use href="./images/icons.svg#icon-checkmark-click"></use>
                         </svg>
                     </span>
                     I accept the terms and conditions of the 
