--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     for Your Business</h1>
                 <button type="button" class="section-hero-button-servise">Order Service</button>
             </div>
-        </section>   
+        </section>
         <!--2 SECTION-->
         <section class="section-our-goals">
             <div class="container our-goals-container">
@@ -462,9 +462,7 @@
                     marketing &
                     growth
                     solutions.</p>
-            </div>
-
-        
+            </div>  
             <div class="social-networks-footer">
                 <p class="social-networks-footer-text">Social media</p>
                 <ul class="social-networks-list-footer">
@@ -509,6 +507,24 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="sybscribe-footer-box">
+                <p class="text-sybscribe">Subscribe</p>
+                <form class="sybscribe-footer-form">
+                    <label for="user-email" class="subscribe-footer-label">
+                        <input
+                        class="sybscribe-footer-input" 
+                        type="email"
+                        id="user-email"
+                        name="user_email"
+                        pattern="[a-zA-Zа-яА-яіІїЇєЄґҐ'@]"
+                        title="webstudio@gmail.com"
+                        placeholder="E-mail">
+                    </label>
+                    <button 
+                    type="submit"
+                    class="btn-sybscribe-footer">Subscribe</button>
+                </form>
             </div>
         </div>
     
