sybscribe/btn/footer/span

--- a/index.html
+++ b/index.html
@@ -523,7 +523,9 @@
                     </label>
                     <button 
                     type="submit"
-                    class="btn-sybscribe-footer">Subscribe</button>
+                    class="btn-sybscribe-footer">
+                    <span class="btn-sybscribe-footer-span">Sybscribe</span>
+                    </button>
                 </form>
             </div>
         </div>
