sybscribe/footer/btn/off

--- a/index.html
+++ b/index.html
@@ -525,6 +525,13 @@
                     type="submit"
                     class="btn-sybscribe-footer">
                     <span class="btn-sybscribe-footer-span">Sybscribe</span>
+                    <svg 
+                    class="btn-sybscribe-footer-icon"
+                    width="24"
+                    height="24"
+                    aria-label="button sybscribe icon">
+                        <use href="./images/icons.svg#icon-subscribe"></use>
+                    </svg>
                     </button>
                 </form>
             </div>
