--- a/index.html
+++ b/index.html
@@ -511,12 +511,12 @@
             <div class="sybscribe-footer-box">
                 <p class="text-sybscribe">Subscribe</p>
                 <form class="sybscribe-footer-form">
-                    <label for="user-email" class="subscribe-footer-label">
+                    <label for="user-mail" class="subscribe-footer-label">
                         <input
                         class="sybscribe-footer-input" 
                         type="email"
-                        id="user-email"
-                        name="user_email"
+                        id="user-mail"
+                        name="us-email"
                         pattern="[a-zA-Zа-яА-яіІїЇєЄґҐ'@]"
                         title="webstudio@gmail.com"
                         placeholder="E-mail">
@@ -524,7 +524,8 @@
                     <button 
                     type="submit"
                     class="btn-sybscribe-footer">
-                <span class="btn-sybscribe-footer-span">Sybscribe</span>
+                    <p class="btn-sybscribe-footer-span">Subscribe</p>
+                <!-- <span class="btn-sybscribe-footer-span">Subscribe</span> -->
                 <svg 
                 class="btn-sybscribe-footer-icon" 
                 width="24"
