footer/button/subscribe

--- a/index.html
+++ b/index.html
@@ -521,18 +521,13 @@
                         title="webstudio@gmail.com"
                         placeholder="E-mail">
                     </label>
-                    <button 
-                    type="submit"
-                    class="btn-sybscribe-footer">
-                    <p class="btn-sybscribe-footer-span">Subscribe</p>
-                <!-- <span class="btn-sybscribe-footer-span">Subscribe</span> -->
-                <svg 
-                class="btn-sybscribe-footer-icon" 
-                width="24"
-                height="24" 
-                aria-label="button sybscribe icon">
-                    <use href="./images/icons.svg#icon-subscribe"></use>
-                </svg>
+                    <button type="submit" class="btn-sybscribe-footer">
+                        Subscribe
+                        <svg class="btn-sybscribe-footer-icon" 
+                        width="24" height="24" 
+                        aria-label="button sybscribe icon">
+                            <use href="./images/icons.svg#icon-subscribe"></use>
+                        </svg>
                     </button>
                 </form>
             </div>
